# pseudobench_graphql

./: .gitignore  README.md
golang/: server_graphql_hello.go  server_noop.go
golang/echo-go-graphql/: server.go
golang/echo-graphql-go/: server.go
nodejs/express-graphql/: graphql_test.js
rust/: Cargo.toml
rust/iron-juniper/: Cargo.toml
rust/src/: main.rs
scala/: build.sbt
scala/akka-http-sangria/: build.sbt
scala/akka-http-sangria/src/main/scala/: Data.scala  SchemaDefinition.scala  Server.scala
