[package]
name = "rust"
version = "0.1.0"
authors = ["David Bernard <david.bernard.31@gmail.com>"]

[dependencies]
#juniper = { version = "0.7.0", features = ["iron-handlers"] }
juniper = { version = "0.7.0", features = ["serde"] }
iron = "^0.5.1"
router = "^0.5.0"
mount = "^0.3.0"
logger = "^0.3.0"
#serde = "^0.9.1"

bytes = "*"
futures = "*"
httparse = "*"
log = "*"
net2 = "*"
time = "*"
tokio-core = "*"
tokio-io = "*"
tokio-proto = "*"
tokio-service = "*"
num_cpus = "*"
url = "*"
futures-cpupool = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
libloading = "*"

tokio-minihttp = { path = "tokio-minihttp" }
